# polibuden

./: README.md
AM/Krokomierz/: local.properties
AM/ProjBackend/: app.py
ASK/: lab1.asm  lab10.asm  lab11.asm  lab2.asm  lab3.asm  lab5.asm  lab6.asm  lab7.asm  lab8.asm  lab9.asm  skrypt.tex
AiSD/raport1/: BS_d.c  CS_d.c  HS_d.c  IS_d.c  MS_d.c  QS1_d.c  QS2_d.c
AiSD/raport2/: generator.c  tester.c
AiSD/raport3/: program.c
AiSD/raport4/: program.c
AiSD/raport5/: program.c
EAN/Projekt/: Interval.h  NewtonRoots.pro  dokumentacja.tex  liczenie.cpp  liczenie.h  main.cpp  okno.cpp  okno.h  (+1 more)
FizLab/: 101.tex  102.tex  201.tex  202.tex  301.tex  302.tex
GKiW/: CMakeLists.txt  FragmentShader.glsl  VertexShader.glsl  actor.cpp  actor.h  cell.cpp  cell.h  engine.cpp  engine.h  main.cpp  map.cpp  map.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  physics.cpp  physics.h  settings.cfg  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h
GKiW/assets/cells/: corridor.cell  corridor_end.cell  corridor_open.cell  corridor_right.cell  staircase.cell
GKiW/assets/maps/: map1.map
GKiW/assets/meshes/: struct_large_steps_pillar_main.mtl  struct_large_straight_ramp.mtl  struct_large_straight_steps.mtl  struct_wall_straight_base.mtl
KCK/: Gradienty.ipynb  Obrazy I.ipynb  Wizualizacja.ipynb
OK/: sprawozdanie.tex
OK/CVRPTW-GRASP/: CMakeLists.txt  main.cpp  problem.cpp  problem.h
PD/: prolog.tex
PE/: lab1.tex  lab2.tex  lab3.tex  lab4.tex  lab5.tex  lab6.tex
PJN/: Lab1.ipynb  Lab2.ipynb  PJN_prezentacja.ipynb
PO/zus/: Aktywa.cpp  Aktywa.h  CMakeLists.txt  Fundusz.h  FunduszBD.cpp  FunduszBD.h  FunduszZD.cpp  FunduszZD.h  IKE.cpp  IKE.h  IKZE.cpp  IKZE.h  Kontrakt.cpp  Kontrakt.h  Lokata.cpp  Lokata.h  Nieruchomosc.cpp  Nieruchomosc.h  Portfel.h  PortfelInwestycyjny.cpp  PortfelInwestycyjny.h  Produkt.cpp  Produkt.h  main.cpp  zus.dia
PPP/: lumberjack.py
PRoz/: CMakeLists.txt  guide.cpp  guide.h  main.cpp
PTC/: PTC-cw1.tex
PTSZ/: bayesian.ipynb  optimizer.sh
PTSZ/genetyk/: CMakeLists.txt  helpers.cpp  helpers.h  instance.cpp  instance.h  main.cpp  solution.cpp  solution.h  solver.cpp  solver.h  task.cpp  task.h
PTSZ/listowy/: CMakeLists.txt  main.c
PW/: CMakeLists.txt  PROTOCOL.tex  README  config  inf132191_h.h  inf132191_k.c  inf132191_s.c
SK/: sciaga.tex
SK2/: sprawko.tex
SW/: README.md
SZBD/: .gitignore  Procfile  README.md  generate.roo  pom.xml
SiAD/: Badanie.ipynb
WBD/: kolosy.sql  lab1.sql  lab10.sql  lab11.sql  lab12.sql  lab13.sql  lab14.sql  lab15.sql  lab2.sql  lab3.sql  lab4.sql  lab5.sql  lab6.sql  lab7.sql  lab8.sql  lab9.sql
(+2081 files in other folders)
